config: Noble Oreo

--- a/arch/arm64/configs/exynos7420-noblelte_defconfig
+++ b/arch/arm64/configs/exynos7420-noblelte_defconfig
@@ -1647,8 +1647,8 @@ CONFIG_BCM4359=y
 # CONFIG_BCM43241 is not set
 # CONFIG_BCM4334W is not set
 # CONFIG_BCM43455 is not set
-CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
+CONFIG_BCMDHD_FW_PATH="/vendor/etc/wifi/bcmdhd_sta.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/vendor/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 # CONFIG_WIFI_BROADCOM_COB is not set
 CONFIG_WLAN_REGION_CODE=100
@@ -2650,10 +2650,12 @@ CONFIG_MALI_MIDGARD=y
 # CONFIG_DYNIMIC_ABB is not set
 # CONFIG_MALI_MIDGARD_WK04 is not set
 CONFIG_MALI_DVFS=y
-CONFIG_DDK_VERSION_OS="n"
+CONFIG_DDK_VERSION_OS="o"
 CONFIG_MALI_T7XX=y
 # CONFIG_MALI_R7P0 is not set
-CONFIG_MALI_R15P0=y
+# CONFIG_MALI_R12P0 is not set
+# CONFIG_MALI_R15P0 is not set
+CONFIG_MALI_R22P0=y
 CONFIG_MALI_SYSTRACE_SUPPORT=y
 CONFIG_MALI_RT_PM=y
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
@@ -2661,18 +2663,21 @@ CONFIG_MALI_DEBUG_SYS=y
 # CONFIG_MALI_DEVFREQ is not set
 CONFIG_MALI_SEC_HWCNT=y
 CONFIG_EXYNOS_SOC_NAME="7420"
-# CONFIG_MALI_MIDGARD_DVFS is not set
 # CONFIG_MALI_DMA_FENCE is not set
-# CONFIG_MALI_CORESTACK is not set
 # CONFIG_MALI_PRFCNT_SET_SECONDARY is not set
+# CONFIG_MALI_MIDGARD_DVFS is not set
+# CONFIG_MALI_CORESTACK is not set
 CONFIG_MALI_FENCE_DEBUG=y
-# CONFIG_MALI_GPU_MMU_AARCH64 is not set
 CONFIG_MALI_SEC_CL_BOOST=y
 CONFIG_MALI_SEC_UTILIZATION=y
 CONFIG_MALI_PM_QOS=y
 # CONFIG_MALI_BTS_OPTIMIZATION is not set
 CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
 CONFIG_MALI_EXYNOS_SECURE_RENDERING=y
+# CONFIG_MALI_JOB_DUMPING is not set
+# CONFIG_MALI_2MB_ALLOC is not set
+# CONFIG_MALI_PWRSOFT_765 is not set
+CONFIG_MALI_SEC_JOB_STATUS_CHECK=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -3669,7 +3674,6 @@ CONFIG_STAGING=y
 # Android
 #
 CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
@@ -4090,6 +4094,12 @@ CONFIG_SOC_SAMSUNG=y
 CONFIG_EXYNOS_CHIPID=y
 
 #
+# Android
+#
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+
+#
 # File systems
 #
 CONFIG_INTERRUPTIBLE_SYNC=y
@@ -4109,7 +4119,6 @@ CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
-CONFIG_SDCARD_FS_XATTR=y
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
