--- a/arch/arm64/configs/exynos7420-noblelte_defconfig
+++ b/arch/arm64/configs/exynos7420-noblelte_defconfig
@@ -332,9 +332,10 @@ CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_SUBSYSTEM_RESTART is not set
 # CONFIG_MSM_SYSMON_COMM is not set
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_RKP=y
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_RKP is not set
+# CONFIG_TIMA_LKM_BLOCK is not set
 # CONFIG_RKP_KDP is not set
 CONFIG_SEC_BAT_AUT=y
 
@@ -1154,7 +1155,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_HP_ILO is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1173,7 +1174,7 @@ CONFIG_KNOX_KAP=y
 CONFIG_UID_CPUTIME=y
 CONFIG_CHECK_SIMSLOT_COUNT=y
 CONFIG_CHECK_GPIO_DETECT=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_SEC_FPGA_ICE40XX is not set
 # CONFIG_C2PORT is not set
 
@@ -1375,7 +1376,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
 
@@ -3721,7 +3722,7 @@ CONFIG_SEC_BSP=y
 CONFIG_SEC_AVC_LOG=y
 CONFIG_SEC_DEBUG_TSP_LOG=y
 CONFIG_SEC_DEBUG_LAST_KMSG=y
-CONFIG_SEC_DEBUG_TIMA_LOG=y
+# CONFIG_SEC_DEBUG_TIMA_LOG is not set
 # CONFIG_SEC_DEBUG_MDM_SEPERATE_CRASH is not set
 CONFIG_SEC_FILE_LEAK_DEBUG=y
 
@@ -4438,6 +4439,9 @@ CONFIG_HAVE_ARCH_KGDB=y
 # Samsung Rooting Restriction Feature
 #
 # CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 #
 # Security options
