--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,37 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+=======
+# Compiled Files
+*.o
+*.cmd
+*.builtin
+*.order
+.config
+.config.old
+*.tmp*
+*.s
+*.so
+*.a
+*.missing*
+*.version
+*.ko
+fmp*
+fips*
+vmlinux
+System.map
+vdso.so.dbg
+Module.symvers
+usr/.initramfs*
+security/selinux*
+net/ipv4/tcp*
+drivers/gator/
+
+# Generated Config
+arch/arm64/include/generated
+include/config/
+include/generated/
+
+# Work
+Helios/Out/*.img
+Helios/R/*
