--- a/Helios/Ramdisk/ramdisk/init.wifi.rc
+++ b/Helios/Ramdisk/ramdisk/init.wifi.rc
@@ -44,7 +44,7 @@ on post-fs-data
 
     # for WIFI MEMDUMP
     # The default value of below memdump file is set in SecProductFeature
-    # write /data/misc/conn/.memdump.info 2
+    write /data/misc/conn/.memdump.info 0
     chown system root /data/misc/conn/.memdump.info
     chmod 0666 /data/misc/conn/.memdump.info
     
@@ -62,10 +62,11 @@ on post-fs-data
     chmod 0664 /data/misc/conn/.roamoff.info
     chmod 0664 /data/misc/conn/.frameburst.info
     chmod 0664 /data/misc/conn/.txbf.info
+
     # for WIFI MAC address
     mkdir /efs/wifi 0775 radio system
     chown system wifi /efs/wifi/.mac.info
-    chmod 0666 /efs/wifi/.mac.info
+    chmod 0660 /efs/wifi/.mac.info
 
     # for WIFI hotspot
     write /data/misc/conn/.softap.info 0
@@ -74,9 +75,9 @@ on post-fs-data
     chmod 0664 /vendor/etc/wifi/indoorchannel.info
     chown system wifi /vendor/etc/wifi/indoorchannel.info
 
-    # for fwpath
-    chmod 0666 /sys/module/wlan/parameters/fwpath
-
+    # Set permissions for firmware path control
+    chown wifi wifi /sys/module/dhd/parameters/firmware_path
+    chmod 0660 /sys/module/dhd/parameters/firmware_path
 	
 on boot
     setprop wifi.interface wlan0
