--- a/Helios/Ramdisk/ramdisk/ueventd.rc
+++ b/Helios/Ramdisk/ramdisk/ueventd.rc
@@ -41,6 +41,8 @@ subsystem adf
 # these should not be world writable
 /dev/diag                 0660   radio      radio
 /dev/diag_arm9            0660   radio      radio
+/dev/android_adb          0660   adb        adb
+/dev/android_adb_enable   0660   adb        adb
 /dev/ttyMSM0              0600   bluetooth  bluetooth
 /dev/uhid                 0660   system     bluetooth
 /dev/uinput               0660   system     bluetooth
@@ -106,6 +108,8 @@ subsystem adf
 /sys/devices/system/cpu/cpu*   cpufreq/scaling_max_freq   0664  system system
 /sys/devices/system/cpu/cpu*   cpufreq/scaling_min_freq   0664  system system
 
+# DVB API device nodes
+/dev/dvb*                 0660   root       system
 # MobiCore
 /dev/mobicore             0700   system     system
 /dev/mobicore-user        0666   radio     system
@@ -113,10 +117,20 @@ subsystem adf
 # Secure MEM driver
 /dev/s5p-smem             0660   system     system
 
+# sensorhub
+/dev/ssp_sensorhub        0660   system     system
+/dev/ssp_data_injection   0660   system     system
 # Fingerprint Sensor
 /dev/vfsspi               0660   system     system
 /dev/esfp0                0660   system     system
 /dev/goodix_fp            0660   system     system
 
-# DVB API device nodes
-/dev/dvb*                 0660   root       system
+# sensor sysfs properties
+/sys/devices/virtual/input/input*	poll_delay	0660	system	radio
+/sys/devices/virtual/input/input*	enable		0660	system	radio
+# Sensorhub IIO
+/dev/ssp_sensorhub        0660   system		system
+/dev/iio:device*          0660   system		system
+/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/enable       0660    system    system
+/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/length       0660    system    system
+/sys/bus/iio/devices/iio:device*    0664   system     radio
