--- a/Helios/Ramdisk/ramdisk/init.rc
+++ b/Helios/Ramdisk/ramdisk/init.rc
@@ -3,7 +3,7 @@
 # IMPORTANT: Do not create world writable files or directories.
 # This is a common source of Android security bugs.
 #
-
+import /init.cronos.rc
 import /init.environ.rc
 import /init.usb.rc
 
@@ -738,9 +738,6 @@ on zygote-start && property:ro.crypto.state=encrypted && property:ro.crypto.type
     start zygote_secondary
 
 on boot
-	#Sensorservice
-	start lhd
-	start sensorhubservice
 
     #knox_kap
     chown system system /dev/knox_kap
